--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,19 +1,33 @@
 {
-    "compilerOptions": {
-      "target": "es6",
-      "module": "commonjs",
-      "outDir": "dist",
-      "sourceMap": true
-    },
-    "files": [
-    "./node_modules/@types/mocha/index.d.ts"
-    //"./node_modules/@types/node/index.d.ts"
-    ],
-    "include": [
-      "src/**/*.ts"
-    ],
-    "exclude": [
-      "node_modules",
-      "**/*.spec.ts"
-    ]
-  }
+	"compilerOptions": {
+		"target": "es5",
+		"module": "esNext",
+		"lib": ["dom", "es2015", "es2015.promise", "es2016", "es2017", "es2018"],
+		"jsx": "react",
+		"outDir": "dist",
+		"noEmit": true,
+		"strict": true,
+		"noImplicitAny": true,
+		"strictNullChecks": true,
+		"strictFunctionTypes": true,
+		"strictPropertyInitialization": true,
+		"noImplicitThis": true,
+		"alwaysStrict": true,
+		"noUnusedLocals": true,
+		"noUnusedParameters": true,
+		"noImplicitReturns": true,
+		"noFallthroughCasesInSwitch": true,
+
+		"moduleResolution": "node",
+		"esModuleInterop": true,
+		"resolveJsonModule": true,
+	},
+	"include": [
+		"src/**/*",
+	],
+	"exclude": [
+		"node_modules",
+    "**/node_modules/*",
+    "**/*.spec.ts"
+	]
+}
