--- a/package.json
+++ b/package.json
@@ -19,6 +19,9 @@
   "dependencies": {
     "@types/mocha": "^5.2.7",
     "@types/node": "^12.7.5",
-    "express": "^4.17.1"
+    "cheerio": "^1.0.0-rc.3",
+    "express": "^4.17.1",
+    "p-settle": "^3.1.0",
+    "request": "^2.88.0"
   }
 }
