--- a/package.json
+++ b/package.json
@@ -17,11 +17,17 @@
   },
   "homepage": "https://github.com/Sh0ri/Training-Typescript#readme",
   "dependencies": {
+    "@types/cheerio": "^0.22.13",
+    "@types/express": "^4.17.1",
     "@types/mocha": "^5.2.7",
     "@types/node": "^12.7.5",
     "cheerio": "^1.0.0-rc.3",
     "express": "^4.17.1",
     "p-settle": "^3.1.0",
-    "request": "^2.88.0"
+    "request": "^2.88.0",
+    "save": "^2.4.0"
+  },
+  "devDependencies": {
+    "@types/request": "^2.48.3"
   }
 }
