--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,7 +5,8 @@
 		"lib": ["dom", "es2015", "es2015.promise", "es2016", "es2017", "es2018"],
 		"jsx": "react",
 		"outDir": "dist",
-		"noEmit": true,
+		//"noEmit": true,
+		"noEmit": false,
 		"strict": true,
 		"noImplicitAny": true,
 		"strictNullChecks": true,
@@ -20,10 +21,10 @@
 
 		"moduleResolution": "node",
 		"esModuleInterop": true,
-		"resolveJsonModule": true,
+		"resolveJsonModule": true
 	},
 	"include": [
-		"src/**/*",
+		"src/**/*"
 	],
 	"exclude": [
 		"node_modules",
