--- a/package.json
+++ b/package.json
@@ -21,10 +21,12 @@
     "@types/express": "^4.17.1",
     "@types/mocha": "^5.2.7",
     "@types/node": "^12.7.5",
+    "@types/request-promise": "^4.1.44",
     "cheerio": "^1.0.0-rc.3",
     "express": "^4.17.1",
     "p-settle": "^3.1.0",
     "request": "^2.88.0",
+    "request-promise": "^4.2.4",
     "save": "^2.4.0"
   },
   "devDependencies": {
