--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,7 +1,7 @@
 {
 	"compilerOptions": {
 		"target": "es5",
-		"module": "esNext",
+		"module": "commonjs",
 		"lib": ["dom", "es2015", "es2015.promise", "es2016", "es2017", "es2018"],
 		"jsx": "react",
 		"outDir": "dist",
