--- a/package.json
+++ b/package.json
@@ -30,7 +30,8 @@
     "puppeteer": "^1.20.0",
     "request": "^2.88.0",
     "request-promise": "^4.2.4",
-    "save": "^2.4.0"
+    "save": "^2.4.0",
+    "typescript": "^3.6.3"
   },
   "devDependencies": {
     "@types/request": "^2.48.3"
