--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,6 @@
 {
 	"compilerOptions": {
-		"target": "es5",
+		"target": "es6",
 		"module": "commonjs",
 		"lib": ["dom", "es2015", "es2015.promise", "es2016", "es2017", "es2018"],
 		"jsx": "react",
@@ -24,11 +24,13 @@
 		"resolveJsonModule": true
 	},
 	"include": [
-		"src/**/*"
+		"src/**/*",
+		"node_modules/@types/puppeteer/index.d.ts",
+		"node_modules/typescript/lib/lib.dom.d.ts"
 	],
 	"exclude": [
-		"node_modules",
-    "**/node_modules/*",
+		//"node_modules",
+    //"**/node_modules/*",
     "**/*.spec.ts"
 	]
 }
