--- a/package.json
+++ b/package.json
@@ -17,12 +17,6 @@
   },
   "homepage": "https://github.com/Sh0ri/Training-Typescript#readme",
   "dependencies": {
-    "@types/cheerio": "^0.22.13",
-    "@types/express": "^4.17.1",
-    "@types/mocha": "^5.2.7",
-    "@types/node": "^12.7.5",
-    "@types/puppeteer": "^1.19.1",
-    "@types/request-promise": "^4.1.44",
     "cheerio": "^1.0.0-rc.3",
     "express": "^4.17.1",
     "nickjs": "^0.3.6",
@@ -34,6 +28,12 @@
     "typescript": "^3.6.3"
   },
   "devDependencies": {
-    "@types/request": "^2.48.3"
+    "@types/request": "^2.48.3",
+    "@types/cheerio": "^0.22.13",
+    "@types/express": "^4.17.1",
+    "@types/mocha": "^5.2.7",
+    "@types/node": "^12.7.5",
+    "@types/puppeteer": "^1.19.1",
+    "@types/request-promise": "^4.1.44",
   }
 }
