--- a/package.json
+++ b/package.json
@@ -34,6 +34,6 @@
     "@types/mocha": "^5.2.7",
     "@types/node": "^12.7.5",
     "@types/puppeteer": "^1.19.1",
-    "@types/request-promise": "^4.1.44",
+    "@types/request-promise": "^4.1.44"
   }
 }
