--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "dependencies": {
     "cheerio": "^1.0.0-rc.3",
     "express": "^4.17.1",
+    "looks-same": "^7.2.1",
     "nickjs": "^0.3.6",
     "p-settle": "^3.1.0",
     "puppeteer": "^1.20.0",
